--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <img src="https://i.imgur.com/LXNzwXM.gif">
                 <p>No Brasil, em média, remover um simples amassado custa R$80... Ou seja: cada vez que você usar seu desamassador, você vai <b>evitar</b> gastar R$80!</p>
                 <p>Com o <b>Desamassador de Carros CarFix</b> você pode simplesmente puxar os amassados do seu carro sem gastar um centavo com funileiros!</p>
-                <a class="btn" href="#">QUERO COMPRAR</a>
+                <a class="btn" href="https://universodascoisas2.pay.yampi.com.br/r/R3VN2KHMXI">QUERO COMPRAR</a>
             </div>
         </div>
     
@@ -29,7 +29,7 @@
                 <h3>Confira o Antes e Depois do carro do nosso cliente Luiz:</h3>
                 <img src="https://i.imgur.com/jGpv1BQ.jpg">
                 <p class="tcenter mt0">Desamasse você mesmo o seu carro e <span class="yellowbg"><b>ECONOMIZE</b></span>! &#x1F447</p>
-                <a class="btn" href="#">COMPRAR COM DESCONTO</a>
+                <a class="btn" href="https://universodascoisas2.pay.yampi.com.br/r/R3VN2KHMXI">COMPRAR COM DESCONTO</a>
             </div>
         </div>
 
@@ -44,7 +44,7 @@
             <div>
                 <h2>CONFIRA VOCÊ MESMO OS RESULTADOS</h2>
                 <img src="https://i.imgur.com/yfaqAqm.jpeg">
-                <a class="btn" href="#">QUERO COMPRAR</a>
+                <a class="btn" href="https://universodascoisas2.pay.yampi.com.br/r/R3VN2KHMXI">QUERO COMPRAR</a>
             </div>
         </div>
 
@@ -66,7 +66,7 @@
             <div>
                 <h2><span class="red">ATENÇÃO:</span> OFERTA EXCLUSIVA!</h2>
                 <img id="ofert" src="https://i.imgur.com/I6b7uyL.gif">
-                <a class="btn" href="#"><span id="subprincipal">Clique aqui e ganhe seu desconto</span><br><span id="principal">QUERO COMPRAR</span></a>
+                <a class="btn" href="https://universodascoisas2.pay.yampi.com.br/r/R3VN2KHMXI"><span id="subprincipal">Clique aqui e ganhe seu desconto</span><br><span id="principal">QUERO COMPRAR</span></a>
                 <img src="https://cdn.shopify.com/s/files/1/0458/9259/9960/files/COMPRA_SEGURA_-_BEE_01_480x480.png?v=1615956552">
             </div>
         </div>
