--- a/index.html
+++ b/index.html
@@ -6,17 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <link rel="stylesheet" href="assets/main.css">
-    <script src="https://kit.fontawesome.com/8a64070044.js" crossorigin="anonymous"></script>
-
-    <script>
-        !function (w, d, t) {
-          w.TiktokAnalyticsObject=t;var ttq=w[t]=w[t]||[];ttq.methods=["page","track","identify","instances","debug","on","off","once","ready","alias","group","enableCookie","disableCookie"],ttq.setAndDefer=function(t,e){t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}};for(var i=0;i<ttq.methods.length;i++)ttq.setAndDefer(ttq,ttq.methods[i]);ttq.instance=function(t){for(var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n]);return e},ttq.load=function(e,n){var i="https://analytics.tiktok.com/i18n/pixel/events.js";ttq._i=ttq._i||{},ttq._i[e]=[],ttq._i[e]._u=i,ttq._t=ttq._t||{},ttq._t[e]=+new Date,ttq._o=ttq._o||{},ttq._o[e]=n||{};var o=document.createElement("script");o.type="text/javascript",o.async=!0,o.src=i+"?sdkid="+e+"&lib="+t;var a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(o,a)};
-
-          ttq.load('CBHGQDRC77UFMFRPOG60');
-          ttq.page();
-        }(window, document, 'ttq');
-    </script>
-
     <title>Desamassador de Carros CarFix</title>
 </head>
 <body>
@@ -25,9 +14,10 @@
             <div>
                 <h1>Desamasse Seu Carro <span class="orangebg">Em 5 Segundos</span> De Forma Simples E Prática!</h1>
                 <img src="https://i.imgur.com/LXNzwXM.gif">
+                <i class="first">Veja as avaliações no final da página!</i>
                 <p>No Brasil, em média, remover um simples amassado custa R$80... Ou seja: cada vez que você usar seu desamassador, você vai <b>evitar</b> gastar R$80!</p>
                 <p>Com o <b>Desamassador de Carros CarFix</b> você pode simplesmente puxar os amassados do seu carro sem gastar um centavo com funileiros!</p>
-                <a class="btn" href="https://universodascoisas2.pay.yampi.com.br/r/R3VN2KHMXI">QUERO COMPRAR</a>
+                <a class="btn" href="https://universodascoisas2.pay.yampi.com.br/r/R3VN2KHMXI"><i class="fa-solid fa-cart-arrow-down"></i> QUERO COMPRAR</a>
             </div>
         </div>
     
@@ -38,7 +28,7 @@
                 <h3>Confira o Antes e Depois do carro do nosso cliente Luiz:</h3>
                 <img src="https://i.imgur.com/jGpv1BQ.jpg">
                 <p class="tcenter mt0">Desamasse você mesmo o seu carro e <span class="yellowbg"><b>ECONOMIZE</b></span>! &#x1F447</p>
-                <a class="btn" href="https://universodascoisas2.pay.yampi.com.br/r/R3VN2KHMXI">COMPRAR COM DESCONTO</a>
+                <a class="btn" href="https://universodascoisas2.pay.yampi.com.br/r/R3VN2KHMXI"><i class="fa-solid fa-cart-arrow-down"></i> COMPRAR COM DESCONTO</a>
             </div>
         </div>
 
@@ -53,7 +43,17 @@
             <div>
                 <h2>CONFIRA VOCÊ MESMO OS RESULTADOS</h2>
                 <img src="https://i.imgur.com/yfaqAqm.jpeg">
-                <a class="btn" href="https://universodascoisas2.pay.yampi.com.br/r/R3VN2KHMXI">QUERO COMPRAR</a>
+                <a class="btn" href="https://universodascoisas2.pay.yampi.com.br/r/R3VN2KHMXI"><i class="fa-solid fa-cart-arrow-down"></i> QUERO COMPRAR</a>
+            </div>
+        </div>
+
+        <div class="bluebg mt18">
+            <div>
+                <h2>COMO FUNCIONA</h2>
+                <p>1) O desamassador possui uma ventosa de ultra-sucção que se prende a lataria;<br>2) Após preso a lataria, basta puxar com força para voltar o amassado.</p>
+                <img src="https://i.imgur.com/0680Xg0.gif" id="comofunciona">
+                <p>Seu sistema de sucção aguenta a pressão exercida, para que o desamassador se mantenha preso a lataria e aguente a força exercida.</p>
+                <p>DICA: Também pode ser usado um pouco de agua quente para facilitar que o amassado volte.</p>
             </div>
         </div>
 
@@ -75,8 +75,68 @@
             <div>
                 <h2><span class="red">ATENÇÃO:</span> OFERTA EXCLUSIVA!</h2>
                 <img id="ofert" src="https://i.imgur.com/I6b7uyL.gif">
-                <a class="btn" href="https://universodascoisas2.pay.yampi.com.br/r/R3VN2KHMXI"><span id="subprincipal">Clique aqui e ganhe seu desconto</span><br><span id="principal">QUERO COMPRAR</span></a>
+                <a class="btn" href="https://universodascoisas2.pay.yampi.com.br/r/R3VN2KHMXI"><span id="subprincipal">Clique aqui e ganhe seu desconto</span><br><span id="principal"><i class="fa-solid fa-cart-arrow-down"></i> QUERO COMPRAR</span></a>
                 <img src="https://cdn.shopify.com/s/files/1/0458/9259/9960/files/COMPRA_SEGURA_-_BEE_01_480x480.png?v=1615956552">
+            </div>
+        </div>
+            
+        <div id="more-depoiments">
+            <div>
+                <h2 class="mb0">CONFIRA AS AVALIAÇÕES</h2>
+                <p class="mt0 tcenter">Arraste para o lado!</p>
+                <div class="image-slider">
+                    <div class="card-slider">
+                        <div class="slider-image">
+                            <img src="assets/media/avaliacao-01.png" class="thumb">
+                        </div>
+                    </div>
+                    <div class="card-slider">
+                        <div class="slider-image">
+                            <img src="assets/media/avaliacao-03.png" class="thumb">
+                        </div>
+                    </div>
+                    <div class="card-slider">
+                        <div class="slider-image">
+                            <img src="assets/media/avaliacao-05.png" class="thumb">
+                        </div>
+                    </div>
+                    <div class="card-slider">
+                        <div class="slider-image">
+                            <img src="assets/media/avaliacao-04.png" class="thumb">
+                        </div>
+                    </div>
+                    <div class="card-slider">
+                        <div class="slider-image">
+                            <img src="assets/media/avaliacao-02.png" class="thumb">
+                        </div>
+                    </div>
+                    <div class="card-slider">
+                        <div class="slider-image">
+                            <img src="assets/media/avaliacao-06.png" class="thumb">
+                        </div>
+                    </div>
+                    <div class="card-slider">
+                        <div class="slider-image">
+                            <img src="assets/media/avaliacao-08.png" class="thumb">
+                        </div>
+                    </div>
+                    <div class="card-slider">
+                        <div class="slider-image">
+                            <img src="assets/media/avaliacao-10.png" class="thumb">
+                        </div>
+                    </div>
+                    <div class="card-slider">
+                        <div class="slider-image">
+                            <img src="assets/media/avaliacao-07.png" class="thumb">
+                        </div>
+                    </div>
+                    <div class="card-slider">
+                        <div class="slider-image">
+                            <img src="assets/media/avaliacao-09.png" class="thumb">
+                        </div>
+                    </div>
+                </div>
+                <p class="tcenter">Quer enviar sua avaliação? <a href="https://universodascoisas.com.br/atendimento/fale-com-a-gente"><u>Fale conosco</u></a>.</p>
             </div>
         </div>
 
@@ -108,15 +168,21 @@
         <div>
             <div>
                 <h3>Ainda tem alguma dúvida?</h3>
-                <p>Entre em contato em nosso e-mail (sac@universodascoisas.com.br) ou clicando no botão abaixo:</p>
+                <p class="tcenter">Entre em contato em nosso e-mail (sac@universodascoisas.com.br) ou clicando no botão abaixo:</p>
                 <a class="btnwpp" href="#"><i class="fa-brands fa-whatsapp"></i> Fale com a gente</a>
                 <nav>
-                    <a href="#">Termos de Uso</a> | <a href="#">Políticas</a>
+                    <a href="https://universodascoisas.com.br/atendimento/termos-de-servico">Termos de Uso</a> | <a href="https://universodascoisas.com.br/atendimento/politica-de-privacidade">Políticas</a>
                 </nav>
                 <hr>
-                <p id="institutional">© 2022 M. de Abreu Negócios Digitais LTDA<br>CNPJ: 40.908.459/0001-02</p>
+                <img src="assets/media/logo.png" class="flogo">
+                <p class="p14">Este é um produto original da <a href="https://universodascoisas.com.br">Universo das Coisas</a>. Preços e condições de pagamento exclusivos para compras neste site oficial, podendo variar com o tempo da oferta. Evite comprar produtos mais baratos ou de outras lojas, pois você pode estar sendo enganado(a) por um golpista. Caso você compre os mesmos produtos em outras lojas, não nos responsabilizamos por quaisquer problemas.</p>
+                <hr>
+                <p class="institutional">Rua José Versolato 111<br>São Bernardo do Campo/SP - CEP: 09750-730<br>© 2022 M. de Abreu Negócios Digitais LTDA<br>CNPJ: 40.908.459/0001-02</p>
+                <img src="https://api.siteblindado.com/v1/seal/aw/www.cea.com.br/seal.png">
             </div>
         </div>
     </footer>
+
+    <script src="https://kit.fontawesome.com/8a64070044.js" crossorigin="anonymous"></script>
 </body>
 </html>
