--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="bluebg">
             <div>
                 <h1>Desamasse Seu Carro <span class="orangebg">Em 5 Segundos</span> De Forma Simples E Prática!</h1>
-                <img src="https://i.imgur.com/LXNzwXM.gif">
+                <img src="https://i.imgur.com/uQKWxwU.gif">
                 <i class="first">Veja as avaliações no final da página!</i>
                 <p>No Brasil, em média, remover um simples amassado custa R$80... Ou seja: cada vez que você usar seu desamassador, você vai <b>evitar</b> gastar R$80!</p>
                 <p>Com o <b>Desamassador de Carros CarFix</b> você pode simplesmente puxar os amassados do seu carro sem gastar um centavo com funileiros!</p>
