--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div>
                 <img class="mt0" src="assets/media/logo.webp" width="50%">
                 <h1 class="mt0 mb0">Desamasse Seu Carro<br><span class="blue">Em 5 Segundos</span><br>De Forma Simples E Econômica</h1>
-                <img class="img-style01" src="https://i.imgur.com/0680Xg0.gif">
+                <img class="img-style01" src="assets/media/webp'gif'-01.webp">
                 <p class="tcenter">No Brasil, remover um simples amassado <b>custa no mínimo R$80</b>...</p>
                 <p class="tcenter"><b><u>OU SEJA</u>:</b> você economiza esse valor (ou mais) a cada vez que usar o <b>Desamassador CarFix</b>!</p>
                 <a class="btn-scroll" href="#ofert">QUERO ESSE DESAMASSADOR!</a>
@@ -55,7 +55,7 @@
                 <p class="tcenter">1) O desamassador possui uma ventosa de ultra-sucção que se prende a lataria;</p>
                 <img src="assets/media/nowebp/img-02.png" loading="lazy">
                 <p class="tcenter">2) Após preso a lataria, basta puxar com força para voltar o amassado.</p>
-                <img src="https://i.imgur.com/nQE5dWi.gif" loading="lazy">
+                <img src="assets/media/como usar - pt2.webp" loading="lazy">
                 <p class="tcenter">Seu sistema de sucção suporta a pressão exercida, para que o desamassador se mantenha preso a lataria e aguente a força exercida para conseguir trazer o amassado de volta!</p>
                 <a class="btn-scroll" href="#ofert">QUERO ESSE DESAMASSADOR!</a>
                 <p><u>DICA</u>: Também pode ser usado um pouco de agua quente para facilitar que o amassado volte!</p>
