--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <img class="img-style01" src="assets/media/nowebp/img-01.png" loading="lazy">
                 <p class="tcenter mb0">Faça como o nosso cliente Luiz</p>
                 <h2 class="mt0">E ECONOMIZE:</h2>
-                <img class="img-style01" src="https://i.imgur.com/KLr8hf0.png" loading="lazy">
+                <img class="img-style01" src="assets/media/depoimento.webp" loading="lazy">
                 <p class="tcenter"><b>Não perca dinheiro!</b> Desamasse você mesmo seu carro &#x1F447;</p>
                 <a class="btn-scroll" href="#ofert">QUERO ESSE DESAMASSADOR!</a>
             </div>
@@ -222,7 +222,6 @@
             </div>
         </div>
     </footer>
-
     <script src="https://kit.fontawesome.com/8a64070044.js" crossorigin="anonymous"></script>
 </body>
 </html>
