--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div>
                 <h2 class="blue mb0">FUJA DOS FUNILEIROS</h2>
                 <p class="tcenter mt0">que te cobram um absurdo para remover simples amassados!</p>
-                <img class="img-style01" src="assets/media/nowebp/img-01.png" loading="lazy">
+                <img class="img-style01" src="assets/media/img-01.webp" loading="lazy">
                 <p class="tcenter mb0">Faça como o nosso cliente Luiz</p>
                 <h2 class="mt0">E ECONOMIZE:</h2>
                 <img class="img-style01" src="assets/media/depoimento.webp" loading="lazy">
@@ -93,7 +93,7 @@
                     <div class="video"><iframe width="560" height="415" src="https://www.youtube.com/embed/ZD-Dk_UOdss?controls=0;rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="border: 2px #0A9DFF solid; box-shadow: 0px 5px 10px #0A9DFF;" allowfullscreen></iframe></div>
                 </div>
                 <h2>CONFIRA VOCÊ MESMO<br><span class="blue">OS RESULTADOS</span></h2>
-                <img src="assets/media/nowebp/antes-depois-01.png" loading="lazy">
+                <img src="assets/media/antes-depois-01.webp" loading="lazy">
                 <a class="btn-scroll" href="#ofert">QUERO ESSE DESAMASSADOR!</a>
             </div>
         </div>
