--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <img class="img-style01" src="assets/media/webp'gif'-01.webp">
                 <p class="tcenter">No Brasil, remover um simples amassado <b>custa no mínimo R$80</b>...</p>
                 <p class="tcenter"><b><u>OU SEJA</u>:</b> você economiza esse valor (ou mais) a cada vez que usar o <b>Desamassador CarFix</b>!</p>
-                <a class="btn-scroll" href="#ofert">QUERO ESSE DESAMASSADOR!</a>
+                <a class="btn-scroll" href="#ofert-scroll">QUERO ESSE DESAMASSADOR!</a>
             </div>
         </div>
         <div id="bg-04" class="darkblue-bg">
@@ -53,7 +53,7 @@
                 <h2 class="mt0">E ECONOMIZE:</h2>
                 <img class="img-style01" src="assets/media/depoimento.webp" loading="lazy">
                 <p class="tcenter"><b>Não perca dinheiro!</b> Desamasse você mesmo seu carro &#x1F447;</p>
-                <a class="btn-scroll" href="#ofert">QUERO ESSE DESAMASSADOR!</a>
+                <a class="btn-scroll" href="#ofert-scroll">QUERO ESSE DESAMASSADOR!</a>
             </div>
         </div>
         <div>
@@ -64,7 +64,7 @@
                 <p class="tcenter">2) Após preso a lataria, basta puxar com força para voltar o amassado.</p>
                 <img src="assets/media/como usar - pt2.webp" loading="lazy">
                 <p class="tcenter">Seu sistema de sucção suporta a pressão exercida, para que o desamassador se mantenha preso a lataria e aguente a força exercida para conseguir trazer o amassado de volta!</p>
-                <a class="btn-scroll" href="#ofert">QUERO ESSE DESAMASSADOR!</a>
+                <a class="btn-scroll" href="#ofert-scroll">QUERO ESSE DESAMASSADOR!</a>
                 <p><u>DICA</u>: Também pode ser usado um pouco de agua quente para facilitar que o amassado volte!</p>
             </div>
         </div>
@@ -89,7 +89,7 @@
                     <li><b>Não</b> danifica a pintura;</li>
                     <li>Desamassa <b>quantas vezes você precisar</b>, dura a vida toda.</li>
                 </ul>
-                <a class="btn-scroll" href="#ofert">QUERO DESAMASSAR MEU CARRO ASSIM!</a>
+                <a class="btn-scroll" href="#ofert-scroll">QUERO DESAMASSAR MEU CARRO ASSIM!</a>
                 <img class="btn-selo" src="assets/media/selo-01.webp" loading="lazy">
             </div>
         </div>
@@ -101,10 +101,11 @@
                 </div>
                 <h2>CONFIRA VOCÊ MESMO<br><span class="blue">OS RESULTADOS</span></h2>
                 <img src="assets/media/antes-depois-01.webp" loading="lazy">
-                <a class="btn-scroll" href="#ofert">QUERO ESSE DESAMASSADOR!</a>
+                <a class="btn-scroll" href="#ofert-scroll">QUERO ESSE DESAMASSADOR!</a>
             </div>
         </div>
         <div id="ofert" class="darkblue-bg">
+            <a name="ofert-scroll"></a>
             <div>
                 <h2><span class="red">ATENÇÃO ABAIXO:</span><br><span class="white">OPORTUNIDADE ÚNICA</span></h2>
                 <div class="product-card">
