--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <a class="btn-scroll" href="#ofert-scroll">QUERO ESSE DESAMASSADOR!</a>
             </div>
         </div>
-        <a name="ofert-scroll"></a>
+        <a name="ofert-scroll" class="ofert-scroll"></a>
         <div id="ofert" class="darkblue-bg">
             <div>
                 <h2><span class="red">ATENÇÃO ABAIXO:</span><br><span class="white">OPORTUNIDADE ÚNICA</span></h2>
