--- a/index.html
+++ b/index.html
@@ -1,210 +1,40 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/main.css">
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <title>Desamassador CarFix</title>
 </head>
 <body>
     <main>
-        <div id="bg-01">
+        <div>
             <div>
-                <img class="mt0" src="assets/media/logo.webp" width="50%">
-                <h1 class="mt0 mb0">Desamasse Seu Carro<br><span class="blue">Em 5 Segundos</span><br>De Forma Simples E Econômica</h1>
-                <img class="img-style01" src="assets/media/webp'gif'-01.webp">
-                <p class="tcenter">No Brasil, remover um simples amassado <b>custa no mínimo R$80</b>...</p>
-                <p class="tcenter"><b><u>OU SEJA</u>:</b> você economiza esse valor (ou mais) a cada vez que usar o <b>Desamassador CarFix</b>!</p>
-                <a class="btn-scroll" href="#ofert-scroll">QUERO ESSE DESAMASSADOR!</a>
-            </div>
-        </div>
-        <div id="bg-04" class="darkblue-bg">
-            <div>
-                <h2 class="blue mb0">FUJA DOS FUNILEIROS</h2>
-                <p class="tcenter mt0">que te cobram um absurdo para remover simples amassados!</p>
-                <img class="img-style01" src="assets/media/img-01.webp" loading="lazy">
-                <p class="tcenter mb0">Faça como o nosso cliente Luiz</p>
-                <h2 class="mt0">E ECONOMIZE:</h2>
-                <img class="img-style01" src="assets/media/depoimento.webp" loading="lazy">
-                <p class="tcenter"><b>Não perca dinheiro!</b> Desamasse você mesmo seu carro &#x1F447;</p>
-                <a class="btn-scroll" href="#ofert-scroll">QUERO ESSE DESAMASSADOR!</a>
+                <img src="assets/media/logo.webp">
+                <h1>Desamasse Seu Carro<br>Em 5 Segundos<br>De Forma Simples E Econômica</h1>
+                <img src="assets/media/webp'gif'-01.webp">
+                <a class="scroll-btn" href="#scroll">QUERO ESSE DESAMASSADOR</a>
             </div>
         </div>
         <div>
             <div>
-                <h2>COMO FUNCIONA</h2>
-                <p class="tcenter">1) O desamassador possui uma ventosa de ultra-sucção que se prende a lataria;</p>
-                <img src="assets/media/nowebp/img-02.png" loading="lazy">
-                <p class="tcenter">2) Após preso a lataria, basta puxar com força para voltar o amassado.</p>
-                <img src="assets/media/como usar - pt2.webp" loading="lazy">
-                <p class="tcenter">Seu sistema de sucção suporta a pressão exercida, para que o desamassador se mantenha preso a lataria e aguente a força exercida para conseguir trazer o amassado de volta!</p>
-                <a class="btn-scroll" href="#ofert-scroll">QUERO ESSE DESAMASSADOR!</a>
-                <p><u>DICA</u>: Também pode ser usado um pouco de agua quente para facilitar que o amassado volte!</p>
+                <h2>FUJA DOS FUNILEIROS</h2>
+                <p>que te cobram absurdos para remove simples amassados!</p>
+                <img src="assets/media/img-01.webp">
+                <p>Faça como nosso cliente Luiz</p>
+                <h2>E ECONOMIZE!</h2>
+                <img src="assets/media/depoimento.webp">
+                <p><b>Não perca dinheiro!</b> Desamasse você mesmo seu carro 👇</p>
+                <a class="scroll-btn" href="#scroll">QUERO ESSE DESAMASSADOR</a>
             </div>
         </div>
-        <div class="darkblue-bg">
-            <div>
-                <h2 class="blue">CARACTERÍSTICAS E BENEFÍCIOS</h2>
-                <div class="benefices">
-                    <i class="fa-solid fa-magnet"></i>
-                    <p>Possui uma <b>ventosa com sistema de ultra sucção</b> projetada para latarias de automóveis;</p>
-                </div>
-                <div class="benefices">
-                    <i class="fa-solid fa-car-burst"></i>
-                    <p>Ideal para os pequenos e médios <b>amassados que acontecem no dia-a-dia</b>;</p>
-                </div>
-                <div class="benefices">
-                    <i class="fa-solid fa-hand-holding-dollar"></i>
-                    <p>Faz você economizar de <b>R$80 a R$100 por amassado</b>;</p>
-                </div>
-                <p><b>+ Informações/Características:</b></p>
-                <ul>
-                    <li>Serve em <b>qualquer</b> tipo de lataria;</li>
-                    <li><b>Não</b> danifica a pintura;</li>
-                    <li>Desamassa <b>quantas vezes você precisar</b>, dura a vida toda.</li>
-                </ul>
-                <a class="btn-scroll" href="#ofert-scroll">QUERO DESAMASSAR MEU CARRO ASSIM!</a>
-                <img class="btn-selo" src="assets/media/selo-01.webp" loading="lazy">
-            </div>
-        </div>
-        <div id="bg-02">
-            <div>
-                <h2><span class="blue"><u>DEPOIMENTO</u></span> DE UM<br>DE NOSSOS CLIENTES</h2>
-                <div class="pre-video">
-                    <div class="video"><iframe width="560" height="415" src="https://www.youtube.com/embed/ZD-Dk_UOdss?controls=0;rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="border: 2px #0A9DFF solid; box-shadow: 0px 5px 10px #0A9DFF;" allowfullscreen></iframe></div>
-                </div>
-                <h2>CONFIRA VOCÊ MESMO<br><span class="blue">OS RESULTADOS</span></h2>
-                <img src="assets/media/antes-depois-01.webp" loading="lazy">
-                <a class="btn-scroll" href="#ofert-scroll">QUERO ESSE DESAMASSADOR!</a>
-            </div>
-        </div>
-        <div id="ofert" class="darkblue-bg">
-            <a id="ofert-scroll"></a> 
-            <div>
-                <h2><span class="red">ATENÇÃO ABAIXO:</span><br><span class="white">OPORTUNIDADE ÚNICA</span></h2>
-                <div class="product-card">
-                    <div class="product-card-title">
-                        <p class="tcenter mt0 mb0">Desamassador CarFix</p>
-                        <h3 class="tcenter mt0 mb0">50% DE DESCONTO<br><u>SÓ HOJE!</u></h3>
-                    </div>
-                    <div class="product-card-body">
-                        <img src="assets/media/img-03.webp">
-                        <div class="economic">Você economiza 50 reais</div>
-                        <p class="tcenter mb0">De <span class="price-before"><s>R$ 119,90</s></span> por</p>
-                        <p class="tcenter mt0 mb0">apenas <span class="price-after">3x</span> de <span class="price-after"><u>R$ 19</u></span></p>
-                        <p class="tcenter mt0">ou R$ 59,90 à vista!</p>
-                        <a class="btn-buy" href="https://universodascoisas2.pay.yampi.com.br/r/R3VN2KHMXI">COMPRAR</a>
-                        <img class="btn-selo2" src="assets/media/selo-01.webp" loading="lazy">
-                    </div>
-                </div>
-            </div>
-        </div>
+        <span id="#scroll"></span>
         <div>
             <div>
-                <h2>ESPECIFICAÇÕES</h2>
-                <ul>
-                    <li><b>Material:</b> Plástico ABS ultra resistente + ventosa especial de ultra sucção.</li>
-                    <li><b>Tamanho:</b> 6x6x6cm.</li>
-                    <li><b>Aplicação:</b> Reparação de Latarias de Carro.</li>
-                    <li><b>Cor:</b> Preto.</li>
-                </ul>
-            </div>
-        </div>
-        <div id="more-depoiments" class="darkblue-bg">
-            <div>
-                <h2 class="mb0">CONFIRA AS AVALIAÇÕES</h2>
-                <p class="mt0 tcenter">Arraste para o lado!</p>
-                <div class="image-slider">
-                    <div class="card-slider">
-                        <div class="slider-image">
-                            <img src="assets/media/avaliacao-01.webp" width="250" height="440" class="thumb" loading="lazy">
-                        </div>
-                    </div>
-                    <div class="card-slider">
-                        <div class="slider-image">
-                            <img src="assets/media/avaliacao-03.webp" width="250" height="440" class="thumb" loading="lazy">
-                        </div>
-                    </div>
-                    <div class="card-slider">
-                        <div class="slider-image">
-                            <img src="assets/media/avaliacao-05.webp" width="250" height="440" class="thumb" loading="lazy">
-                        </div>
-                    </div>
-                    <div class="card-slider">
-                        <div class="slider-image">
-                            <img src="assets/media/avaliacao-04.webp" width="250" height="440" class="thumb" loading="lazy">
-                        </div>
-                    </div>
-                    <div class="card-slider">
-                        <div class="slider-image">
-                            <img src="assets/media/avaliacao-02.webp" width="250" height="440" class="thumb" loading="lazy">
-                        </div>
-                    </div>
-                    <div class="card-slider">
-                        <div class="slider-image">
-                            <img src="assets/media/avaliacao-06.webp" width="250" height="440" class="thumb" loading="lazy">
-                        </div>
-                    </div>
-                    <div class="card-slider">
-                        <div class="slider-image">
-                            <img src="assets/media/avaliacao-08.webp" width="250" height="440" class="thumb" loading="lazy">
-                        </div>
-                    </div>
-                    <div class="card-slider">
-                        <div class="slider-image">
-                            <img src="assets/media/avaliacao-10.webp" width="250" height="440" class="thumb" loading="lazy">
-                        </div>
-                    </div>
-                    <div class="card-slider">
-                        <div class="slider-image">
-                            <img src="assets/media/avaliacao-07.webp" width="250" height="440" class="thumb" loading="lazy">
-                        </div>
-                    </div>
-                    <div class="card-slider">
-                        <div class="slider-image">
-                            <img src="assets/media/avaliacao-09.webp" width="250" height="440" class="thumb" loading="lazy">
-                        </div>
-                    </div>
-                </div>
-                <p class="tcenter">Quer enviar sua avaliação?<br><a href="https://universodascoisas.com.br/atendimento/fale-com-a-gente"><u>FALE CONOSCO</u></a>!</p>
-            </div>
-        </div>
-        <div id="guarantee">
-            <div>
-                <img src="assets/media/nowebp/selo-garantia.png" width="300" height="250" loading="lazy">
-                <h2 class="mb0">7 DIAS DE GARANTIA</h2>
-                <p class="tcenter mt0">100% de Satisfação ou SEU DINHEIRO DE VOLTA!</p>
-                <p>A nossa loja, pensando em você e no seu bem-estar, lhe oferece 100% de segurança na sua compra.</p>
-                <p>E se por algum motivo você não gostar, dentro de 07 dias te devolveremos todo o seu dinheiro.</p>
-                <ul>
-                    <li>Produto com garantia.</li>
-                    <li>Você paga somente o valor descrito em nosso site, não haverá cobranças adicionais de taxas ou impostos.</li>
-                    <li>Enviamos para todo o Brasil com seguro e código de rastreamento online.</li>
-                    <li>Processo de pagamento intermediado totalmente seguro, por boleto bancário ou cartão de crédito.</li>
-                    <li>Suporte ao cliente antes e após a compra caso você tenha qualquer dúvida ou problema, chat de atendimento.</li>
-                </ul>
+                <h2>ATENÇÃO ABAIXO:<br>OPORTUNIDADE ÚNICA</h2>
             </div>
         </div>
     </main>
-    <footer>
-        <div>
-            <div>
-                <h2>AINDA TEM ALGUMA DÚVIDA?</h2>
-                <p class="tcenter">Entre em contato em nosso e-mail (sac@universodascoisas.com.br) ou clicando no botão abaixo:</p>
-                <a href="https://api.whatsapp.com/send?phone=5585981277716&text=Ol%C3%A1%2C%20tenho%20uma%20d%C3%BAvida"><img src="assets/media/btn-wpp.webp" width="300" height="83" loading="lazy"></a>
-                <nav>
-                    <a href="https://universodascoisas.com.br/atendimento/termos-de-servico">Termos de Uso</a> | <a href="https://universodascoisas.com.br/atendimento/politica-de-privacidade">Políticas</a>
-                </nav>
-                <hr>
-                <img src="assets/media/logo.webp" loading="lazy">
-                <p class="institutional">Este é um produto original da Universo das Coisas. Preços e condições de pagamento exclusivos para compras neste site oficial, podendo variar com o tempo da oferta. Evite comprar produtos mais baratos ou de outras lojas, pois você pode estar sendo enganado(a) por um golpista. Caso você compre os mesmos produtos em outras lojas, não nos responsabilizamos por quaisquer problemas.</p>
-                <hr>
-                <p class="institutional tcenter">Rua José Versolato 111<br>São Bernardo do Campo/SP - CEP: 09750-730<br>© 2022 M. de Abreu Negócios Digitais LTDA<br>CNPJ: 40.908.459/0001-02</p>
-                <img src="https://api.siteblindado.com/v1/seal/aw/www.cea.com.br/seal.png"loading="lazy">
-            </div>
-        </div>
-    </footer>
 </body>
 </html>
