--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a class="scroll-btn" href="#scroll">QUERO ESSE DESAMASSADOR</a>
             </div>
         </div>
-        <span id="#scroll"></span>
+        <a name="scroll"></a>
         <div>
             <div>
                 <h2>ATENÇÃO ABAIXO:<br>OPORTUNIDADE ÚNICA</h2>
