--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
                 <a class="scroll-btn" href="#scroll">QUERO ESSE DESAMASSADOR</a>
             </div>
         </div>
-        <a name="scroll"></a>
         <div>
-            <div>
+            <div id="scroll">
                 <h2>ATENÇÃO ABAIXO:<br>OPORTUNIDADE ÚNICA</h2>
             </div>
         </div>
