--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <main>
         <div>
             <div>
-                <img src="assets/media/logo.webp">
+                <img src="assets/media/logo.webp" width="240" height="59">
                 <h1>Desamasse Seu Carro<br>Em 5 Segundos<br>De Forma Simples E Econômica</h1>
-                <img src="assets/media/webp'gif'-01.webp">
+                <img src="assets/media/webp'gif'-01.webp" width="320" height="320">
                 <a class="scroll-btn" href="#scroll">QUERO ESSE DESAMASSADOR</a>
             </div>
         </div>
@@ -21,10 +21,10 @@
             <div>
                 <h2>FUJA DOS FUNILEIROS</h2>
                 <p>que te cobram absurdos para remove simples amassados!</p>
-                <img src="assets/media/img-01.webp">
+                <img src="assets/media/img-01.webp" width="400" height="273">
                 <p>Faça como nosso cliente Luiz</p>
                 <h2>E ECONOMIZE!</h2>
-                <img src="assets/media/depoimento.webp">
+                <img src="assets/media/depoimento.webp" width="400" height="818">
                 <p><b>Não perca dinheiro!</b> Desamasse você mesmo seu carro 👇</p>
                 <a class="scroll-btn" href="#scroll">QUERO ESSE DESAMASSADOR</a>
             </div>
