--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <main>
         <div id="bg-01">
             <div>
-                <img class="mt0" src="assets/media/logo.webp" width="50%">
+                <img class="mt0" src="assets/media/logo.webp" width="120" height="30">
                 <h1 class="mt0 mb0">Desamasse Seu Carro<br><span class="blue">Em 5 Segundos</span><br>De Forma Simples E Econômica</h1>
-                <img class="img-style01" src="assets/media/webp'gif'-01.webp">
+                <img class="img-style01" src="assets/media/webp'gif'-01.webp" width="320" height="320">
                 <p class="tcenter">No Brasil, remover um simples amassado <b>custa no mínimo R$80</b>...</p>
                 <p class="tcenter"><b><u>OU SEJA</u>:</b> você economiza esse valor (ou mais) a cada vez que usar o <b>Desamassador CarFix</b>!</p>
                 <a class="btn-scroll" href="#ofert-scroll">QUERO ESSE DESAMASSADOR!</a>
@@ -24,10 +24,10 @@
             <div>
                 <h2 class="blue mb0">FUJA DOS FUNILEIROS</h2>
                 <p class="tcenter mt0">que te cobram um absurdo para remover simples amassados!</p>
-                <img class="img-style01" src="assets/media/img-01.webp" loading="lazy">
+                <img class="img-style01" src="assets/media/img-01.webp" width="400" height="279" loading="lazy">
                 <p class="tcenter mb0">Faça como o nosso cliente Luiz</p>
                 <h2 class="mt0">E ECONOMIZE:</h2>
-                <img class="img-style01" src="assets/media/depoimento.webp" loading="lazy">
+                <img class="img-style01" src="assets/media/depoimento.webp" width="400" height="818" loading="lazy">
                 <p class="tcenter"><b>Não perca dinheiro!</b> Desamasse você mesmo seu carro &#x1F447;</p>
                 <a class="btn-scroll" href="#ofert-scroll">QUERO ESSE DESAMASSADOR!</a>
             </div>
